--- a/src/styles/constants/_colors.scss
+++ b/src/styles/constants/_colors.scss
@@ -3,6 +3,7 @@ $WHITE: #ffffff;
 $BLACK: #000000;
 $GRAY2: #222222;
 $GRAY3: #333333;
+$GRAY4: #444444;
 $GRAY6: #666666;
 $GRAYA: #aaaaaa;
 $GRAYD: #dddddd;
@@ -18,3 +19,5 @@ $BLUE: #007aff;
 $INDIGO: #5856d6;
 $PURPLE: #af52de;
 $PINK: #ff2d55;
+
+$THEME: #ffd300;
