--- a/src/routes/Main/main.module.scss
+++ b/src/routes/Main/main.module.scss
@@ -1,3 +1,62 @@
-.bold {
+@use '/src/styles/constants/colors';
+
+.mainContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 300px;
+  height: 445px;
+
+  .firstText {
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 23px;
+    color: colors.$BLACK;
+    letter-spacing: 0.1px;
+  }
+
+  .lastText {
+    margin-top: 15px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 17px;
+    color: colors.$GRAY4;
+    letter-spacing: 0.1px;
+  }
+
+  img {
+    width: 200px;
+    height: 200px;
+    margin-left: auto;
+  }
+}
+
+.footerContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  width: 300px;
+  height: 80px;
   font-weight: 700;
+
+  span {
+    font-size: 16px;
+    color: colors.$THEME;
+  }
+
+  p {
+    font-size: 16px;
+    color: colors.$BLACK;
+  }
+
+  button {
+    width: 100%;
+    height: 50px;
+    font-size: 14px;
+    font-weight: 700;
+    color: colors.$BLACK;
+    background-color: colors.$THEME;
+    border-radius: 23px;
+  }
 }
