style: color 추가

--- a/src/styles/constants/_colors.scss
+++ b/src/styles/constants/_colors.scss
@@ -6,6 +6,7 @@ $GRAY3: #333333;
 $GRAY4: #444444;
 $GRAY6: #666666;
 $GRAYA: #aaaaaa;
+$GRAYC: #cccccc;
 $GRAYD: #dddddd;
 $GRAYE: #eeeeee;
 
@@ -21,3 +22,5 @@ $PURPLE: #af52de;
 $PINK: #ff2d55;
 
 $THEME: #ffd300;
+$RED1: #ff453a;
+$DISABLED: #f7f7f7;
