--- a/src/routes/SurveyStart/surveyStart.module.scss
+++ b/src/routes/SurveyStart/surveyStart.module.scss
@@ -3,36 +3,52 @@
 .mainContainer {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   width: 300px;
-  height: 480px;
+  height: 445px;
 
-  label {
-    margin-right: 10px;
-    font-size: 15px;
-    font-weight: 500;
-    color: colors.$GRAY4;
+  .firstText {
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 23px;
+    color: colors.$BLACK;
+    letter-spacing: 0.1px;
   }
 
-  input {
-    width: 120px;
-    padding-left: 10px;
-    font-size: 15px;
-    font-weight: 500;
+  .lastText {
+    margin-top: 15px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 17px;
     color: colors.$GRAY4;
-    border-bottom: 1px solid colors.$GRAY4;
+    letter-spacing: 0.1px;
   }
 
-  .btnListContainer {
-    display: flex;
-    flex-direction: column;
+  img {
+    width: 200px;
+    height: 200px;
+    margin-left: auto;
   }
 }
 
 .footerContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
   width: 300px;
   height: 80px;
+  font-weight: 700;
+
+  span {
+    font-size: 16px;
+    color: colors.$THEME;
+  }
+
+  p {
+    font-size: 16px;
+    color: colors.$BLACK;
+  }
 
   button {
     width: 100%;
