--- a/src/routes/Survey/survey.module.scss
+++ b/src/routes/Survey/survey.module.scss
@@ -53,31 +53,29 @@
       background-color: colors.$DISABLED;
       border-radius: 22px;
     }
+
+    .clicked {
+      background-color: colors.$THEME;
+    }
   }
 }
 
-.footer {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  width: 300px;
-  height: 50px;
+// .footer {
+//   display: flex;
+//   align-items: center;
+//   justify-content: space-around;
+//   width: 300px;
+//   height: 50px;
 
-  button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+//   button {
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//     font-size: 16px;
+//     font-weight: 700;
+//   }
 
-  .prevBtn {
-    font-size: 16px;
-    font-weight: 700;
-    color: colors.$GRAY4;
-  }
-
-  .nextBtn {
-    font-size: 16px;
-    font-weight: 700;
-    color: colors.$THEME;
-  }
-}
+//   .prevBtn { color: colors.$GRAY4; }
+//   .nextBtn { color: colors.$GRAYC; }
+//   .nextPrimaryBtn { color: colors.$THEME; }
+// }
